resolved spacing issues and messy catalog on alefbas mobile website

--- a/src/alefba-src/src/App.scss
+++ b/src/alefba-src/src/App.scss
@@ -22,23 +22,8 @@
   background: rgba(0,0,0,0);
 }
 
-#sample-footer-space, #catalog-footer-space{
-  height: 27vh;
-}
-
-#utils-sample-space{
-  height: 27vh;
-}
-
-#usage-utils-space{
-  height: 85vh;
-}
-
-#abilities-usage-space{
-  height: 27vh;
-}
-
-#main-abilities-space{
+#sample-footer-space, #catalog-footer-space, #main-abilities-space,#abilities-usage-space
+#usage-utils-space, #utils-sample-space {
   height: 25vh;
 }
 
