--- a/src/alefba-src/src/stylesheets/abilities-section.scss
+++ b/src/alefba-src/src/stylesheets/abilities-section.scss
@@ -15,7 +15,7 @@
 }
 
 #abilities-title-space{
-  height: 3vw;
+  height: 0;
 }
 
 #abilities{
